Quede en validaciones

--- a/src/Views/Categories/index.html
+++ b/src/Views/Categories/index.html
@@ -4,8 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Categorias</title>
+    <link href="../../styles.css" rel="stylesheet">
 </head>
 <body>
-    <h1>Categorias</h1>
+    <h1 class="title">Categorias</h1>
+    <div class="nuevo">
+     <button class="nuevo__boton" ><a href="#Nueva" class="link">Nuevo</a></button>
+    </div>
+
+    <table class="tabla">
+        <thead class="cabecera">
+            <tr>
+            <th class="cabecera__encabezado">Id Usuario</th>
+            <th class="cabecera__encabezado">Nombre</th>
+            <th class="cabecera__encabezado">Descripcion</th>
+            <th class="cabecera__encabezado">Fecha de Creacion</th>
+            <th class="cabecera__encabezado">Ultima actualizacion</th>
+            </tr>
+        </thead>
+    </table>
+
+
+
 </body>
 </html>
