--- a/src/styles.css
+++ b/src/styles.css
@@ -35,3 +35,138 @@
     text-decoration: none;
     color: white;
 }
+
+.tabla{
+    margin: 0 auto;
+    border-collapse: collapse;
+    border: 1px solid black;
+    
+}
+
+.cabecera__encabezado{
+    padding: 10px;
+   gap: 15px;
+   border-left: 1px solid black;
+}
+
+.title{
+    display: flex;
+    justify-content: center;
+}
+
+.nuevo{
+    margin: 20px auto;
+    display: flex;
+    justify-content: end;
+    width: 100%;
+}
+
+
+.nuevo__boton{
+    height: 40px;
+    margin-right: 15px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    background-color: green;
+    font-size: 15px;
+    padding: 10px;
+    border-radius: 15px;
+    cursor: pointer;
+    color: white;
+    width: 200px;
+
+}
+
+.datos{
+    
+    margin:50px auto;
+    background-color: black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    width: 850px;
+    height: 200px;
+    border-radius: 25px;
+}
+
+
+.labels{
+    display: flex;
+    flex-direction: column;
+    gap: 70px;
+    color: white;
+    width: 300px;
+    font-size: 20px;
+    font-weight: bold;
+}
+
+.entradas{
+   
+    width: 100px;
+    gap: 20px;
+    display: flex;
+    flex-direction: column;
+}
+
+.entradas__datos{
+    width: 290px;
+    height: 30px;
+    border-radius: 5px;
+}
+
+.nuevo--formulario{
+    display: block;
+    
+    width: 100%;
+    margin: 0 auto;
+}
+
+.nuevo__boton--formulario{
+   width: 200px;
+   height: 30px; 
+   background-color: black;
+   
+   margin: 0 auto;
+}
+
+th{
+  border-bottom: 1px solid black;
+
+}
+
+td{
+    padding: 10px;
+    border-left: 1px solid black ;
+}
+
+.link{
+    text-decoration: none;
+    color: white;
+}
+
+textarea{
+    resize: none;
+    width: 290px;
+}
+
+.error{
+    width: 800px;
+    font-size: 10px;
+    color: white;
+}
+
+.nombreMovido{
+    margin-bottom: 20px;
+}
+
+.descripcionMovido{
+    margin-bottom: 30px;
+}
+
+
+.datos--tamaño{
+   height: 240px;
+}
